Changed Counter to Landing Page

--- a/Client/Pages/Counter.razor
+++ b/Client/Pages/Counter.razor
@@ -2,7 +2,39 @@
 
 <PageTitle>Counter</PageTitle>
 
-<h1>Counter</h1>
+<div style="width: 1309px; height: 738px; position: relative; background: #7D7D7D; border: 1px black solid">
+    <div style="width: 1309px; height: 76px; left: 0px; top: 0px; position: absolute; background: #D9D9D9; border: 1px black solid"></div>
+    <div style="width: 413px; left: 0px; top: 20px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">PC Part Reviews</div>
+    <div style="width: 359.38px; height: 190px; left: 93px; top: 96.46px; position: absolute; background: #D9D9D9; border-radius: 7.36px; border: 0.74px black solid"></div>
+    <div style="width: 102.36px; left: 93px; top: 178.20px; position: absolute; text-align: center; color: black; font-size: 11.05px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">This is the CPU<br />Review</div>
+    <img style="width: 258.49px; height: 190px; left: 193.89px; top: 96.46px; position: absolute; border-radius: 7.36px; border: 0.74px black solid" src="https://via.placeholder.com/258x190" />
+    <div style="width: 361.12px; height: 190.92px; left: 476.44px; top: 96px; position: absolute; background: #D9D9D9; border-radius: 7.40px; border: 0.74px black solid"></div>
+    <div style="width: 102.86px; left: 475px; top: 178.46px; position: absolute; text-align: center; color: black; font-size: 11.10px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">This is the Air Cooler Review</div>
+    <img style="width: 259.74px; height: 190.92px; left: 577.82px; top: 96px; position: absolute; border-radius: 7.40px; border: 0.74px black solid" src="https://via.placeholder.com/260x191" />
+    <div style="width: 361.12px; height: 190.92px; left: 861.44px; top: 96.46px; position: absolute; background: #D9D9D9; border-radius: 7.40px; border: 0.74px black solid"></div>
+    <div style="width: 102.86px; left: 860px; top: 178.46px; position: absolute; text-align: center; color: black; font-size: 11.10px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">This is the Water Cooler Review</div>
+    <img style="width: 259.74px; height: 190.92px; left: 962.82px; top: 96.46px; position: absolute; border-radius: 7.40px; border: 0.74px black solid" src="https://via.placeholder.com/260x191" />
+    <div style="width: 361.12px; height: 190.92px; left: 476.44px; top: 517.46px; position: absolute; background: #D9D9D9; border-radius: 7.40px; border: 0.74px black solid"></div>
+    <div style="width: 102.86px; left: 475px; top: 599.46px; position: absolute; text-align: center; color: black; font-size: 11.10px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">This is the Water Cooler Review</div>
+    <img style="width: 259.74px; height: 190.92px; left: 577.82px; top: 517.46px; position: absolute; border-radius: 7.40px; border: 0.74px black solid" src="https://via.placeholder.com/260x191" />
+    <div style="width: 361.12px; height: 190.92px; left: 861.44px; top: 520.46px; position: absolute; background: #D9D9D9; border-radius: 7.40px; border: 0.74px black solid"></div>
+    <div style="width: 102.86px; left: 861px; top: 602.46px; position: absolute; text-align: center; color: black; font-size: 11.10px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">This is the PSU Review</div>
+    <img style="width: 259.74px; height: 190.92px; left: 962.82px; top: 520.46px; position: absolute; border-radius: 7.40px; border: 0.74px black solid" src="https://via.placeholder.com/260x191" />
+    <div style="width: 361.12px; height: 190.92px; left: 90.44px; top: 517.46px; position: absolute; background: #D9D9D9; border-radius: 7.40px; border: 0.74px black solid"></div>
+    <div style="width: 102.86px; left: 89px; top: 604.46px; position: absolute; text-align: center; color: black; font-size: 11.10px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">This is the SSD Review</div>
+    <img style="width: 259.74px; height: 190.92px; left: 191.82px; top: 517.46px; position: absolute; border-radius: 7.40px; border: 0.74px black solid" src="https://via.placeholder.com/260x191" />
+    <div style="width: 361.12px; height: 190.92px; left: 90.44px; top: 306.46px; position: absolute; background: #D9D9D9; border-radius: 7.40px; border: 0.74px black solid"></div>
+    <div style="width: 102.86px; left: 88px; top: 390.46px; position: absolute; text-align: center; color: black; font-size: 11.10px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">This is the GPU Review</div>
+    <img style="width: 259.74px; height: 190.92px; left: 191.82px; top: 306.46px; position: absolute; border-radius: 7.40px; border: 0.74px black solid" src="https://via.placeholder.com/260x191" />
+    <div style="width: 361.12px; height: 190.92px; left: 476.44px; top: 306.46px; position: absolute; background: #D9D9D9; border-radius: 7.40px; border: 0.74px black solid"></div>
+    <div style="width: 102.86px; left: 476px; top: 390.46px; position: absolute; text-align: center; color: black; font-size: 11.10px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">This is the RAM Stick Review</div>
+    <img style="width: 259.74px; height: 190.92px; left: 577.82px; top: 306.46px; position: absolute; border-radius: 7.40px; border: 0.74px black solid" src="https://via.placeholder.com/260x191" />
+    <div style="width: 361.12px; height: 190.92px; left: 861.44px; top: 308.46px; position: absolute; background: #D9D9D9; border-radius: 7.40px; border: 0.74px black solid"></div>
+    <div style="width: 102.86px; left: 860px; top: 384.46px; position: absolute; text-align: center; color: black; font-size: 11.10px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">This is the Motherboard Review</div>
+    <img style="width: 259.74px; height: 190.92px; left: 962.82px; top: 308.46px; position: absolute; border-radius: 7.40px; border: 0.74px black solid" src="https://via.placeholder.com/260x191" />
+</div>
+
+@* <h1>Counter</h1>
 
 <p role="status">Current count: @currentCount</p>
 
@@ -16,3 +48,4 @@
         currentCount++;
     }
 }
+ *@
