--- a/Client/Pages/Counter.razor
+++ b/Client/Pages/Counter.razor
@@ -2,6 +2,8 @@
 
 <PageTitle>Counter</PageTitle>
 
+<h1> Hello
+</h1>
 <div style="width: 1309px; height: 738px; position: relative; background: #7D7D7D; border: 1px black solid">
     <div style="width: 1309px; height: 76px; left: 0px; top: 0px; position: absolute; background: #D9D9D9; border: 1px black solid"></div>
     <div style="width: 413px; left: 0px; top: 20px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Inter; font-style: italic; font-weight: 900; word-wrap: break-word">PC Part Reviews</div>
